// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyConverter component renders the component 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dBnMMB"
  >
    <h1
      class="sc-EHOje fcwhPV"
    >
      Currency exchange
    </h1>
    <div
      class="sc-bwzfXH hAQwOt"
    >
      <div
        data-originalcomponent="PocketFrom"
      />
      <div
        class="sc-bxivhb hXXhKc"
      >
        <div
          data-originalcomponent="CurrentRate"
        />
      </div>
      <div
        class="sc-ifAKCX kgCAnN"
      >
        <div
          data-originalcomponent="ChangePocketsButton"
        />
      </div>
    </div>
    <div
      class="sc-htpNat huceFd"
    >
      <div
        data-originalcomponent="PocketTo"
      />
      <div
        data-originalcomponent="ExchangeButton"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrencyConverter component show loader when isBusy = true 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dBnMMB"
  >
    <h1
      class="sc-EHOje fcwhPV"
    >
      Currency exchange
    </h1>
    <div
      data-originalcomponent="Loader"
    />
  </div>
</DocumentFragment>
`;
